--- a/checkout.html
+++ b/checkout.html
@@ -441,13 +441,13 @@
                                 <aside class="column-1_4 widget widget_socials">
                                     <div class="widget_inner">
                                         <div class="logo">
-                                            <a href="index.html">
-                                                <img src="images/new-logo-tarmonia.png" class="logo_main" alt="" width="74" height="74">
-                                            </a>
-                                            <div class="logo-text-box">
-                                                <span>TARMONIA</span>
-                                            </div>
-                                        </div>
+                                                    <a href="index.html">
+                                                        <img src="images/big-logo.png" class="logo_main" alt="" width="74" height="74">
+                                                    </a>
+                                                    <div class="logo-text-box">
+                                                        <span>TARMONIA</span>
+                                                    </div>
+                                                </div>
                                     </div>
                                 </aside>
                                 <aside class="column-1_4 widget widget_text">
@@ -459,7 +459,33 @@
                                     <div class="textwidget">
                                         <span class="accent1">Phone: 123-456-7890</span>
                                         <br> Fax: 010-927 7092
-                                        <br><span class="contact-email">Email:<a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span>
+                                        <br><span class="contact-email">Email: <a href="mailto:help@conebyte.com">help@conebyte.com</a></span>
+                                    </div>
+                                </aside>
+                                <aside class="column-1_4 widget widget_socials">
+                                    <div class="widget_inner">
+                                        <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
+                                            <div class="sc_socials_item">
+                                                <a href="#" target="_blank" class="social_icons social_twitter">
+                                                    <span class="icon-twitter"></span>
+                                                </a>
+                                            </div>
+                                            <div class="sc_socials_item">
+                                                <a href="#" target="_blank" class="social_icons social_facebook">
+                                                    <span class="icon-facebook"></span>
+                                                </a>
+                                            </div>
+                                            <div class="sc_socials_item">
+                                                <a href="#" target="_blank" class="social_icons social_gplus-1">
+                                                    <span class="icon-gplus-1"></span>
+                                                </a>
+                                            </div>
+                                            <div class="sc_socials_item">
+                                                <a href="#" target="_blank" class="social_icons social_linkedin">
+                                                    <span class="icon-linkedin"></span>
+                                                </a>
+                                            </div>
+                                        </div>
                                     </div>
                                 </aside>
                             </div>
