--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
                             <div class="textwidget">
                                 <span class="accent1">Phone: 123-456-7890</span>
                                 <br> Fax: 010-927 7092
-                                <br><span class="contact-email">Email:<a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span>
+                                <br> Email: <a href="mailto:help@conebyte.com">help@conebyte.com</a>
                             </div>
                         </aside>
                         <aside class="column-1_4 widget widget_socials">
@@ -1108,7 +1108,7 @@
 </div>
 
 <a href="#" class="scroll_to_top icon-up" title="Scroll to top"></a>
-<div class="custom_html_section"></div>
+<!-- removed empty custom HTML section to prevent extra whitespace under footer -->
 <script defer type='text/javascript' src='js/vendor/jquery/jquery.js'></script>
 <script defer type='text/javascript' src='js/vendor/jquery/jquery-migrate.min.js'></script>
 <script defer type='text/javascript' src='js/custom/custom.js'></script>
