check out footer fix, single product weights and cart fix checkout oreder details fix

--- a/checkout.html
+++ b/checkout.html
@@ -436,7 +436,7 @@
                                             <li class="menu-item"><a href="cobbles.html">Famous Dairy Facts</a></li>
                                             <li class="menu-item"><a href="grid.html">From the Farm to the Fridge</a></li>
                                             <li class="menu-item"><a href="contacts.html">Dairy Farm Map</a></li>
-                                            <li class="menu-item"><a href="classic.html">Farm Practices</a></li>
+                                            <li class="menu-item current-menu-item "><a href="classic.html">Farm Practices</a></li>
                                         </ul>
                                     </div>
                                 </aside>
@@ -458,7 +458,7 @@
                                     <div class="menu-footer-menu-3-container">
                                         <ul id="menu-footer-menu-3" class="menu">
                                             <li class="menu-item"><a href="masonry-3-columns.html">Local Milk Blog</a></li>
-                                            <li class="menu-item"><a href="classic.html">Contests/Sweepstakes</a></li>
+                                            <li class="menu-item current-menu-item "><a href="classic.html">Contests/Sweepstakes</a></li>
                                             <li class="menu-item"><a href="cobbles.html">Videos</a></li>
                                             <li class="menu-item"><a href="about-1.html">News Releases</a></li>
                                             <li class="menu-item"><a href="about-2.html">Newsletters</a></li>
@@ -497,18 +497,9 @@
                                     <div class="textwidget">
                                         <span class="accent1">Phone: 123-456-7890</span>
                                         <br> Fax: 010-927 7092
-                                        <br> Email: <a href="mailto:help@conebyte.com">help@conebyte.com</a>
+                                        <br><span class="contact-email">Email:<a href="mailto:info@tarmonia.com">info@tarmonia.com</a></span>
                                     </div>
                                 </aside>
-                                    <aside class="column-1_4 widget widget_text footer-contact-row">
-                                        <div class="textwidget footer-contact-row-inner">
-                                            <div class="footer-contact-item footer-contact-brand"><strong>TARMONIA</strong></div>
-                                            <div class="footer-contact-item"><span class="accent1">Address</span>: B-3-13, Pusat Perdagangan, 1B, Jalan SS 8/39, Icon City, 47300 Petaling Jaya, Selangor</div>
-                                            <div class="footer-contact-item"><span class="accent1">Phone</span>: 123-456-7890</div>
-                                            <div class="footer-contact-item">Fax: 010-927 7092</div>
-                                            <div class="footer-contact-item">Email: <a href="mailto:help@conebyte.com">help@conebyte.com</a></div>
-                                        </div>
-                                    </aside>
                                 <aside class="column-1_4 widget widget_socials">
                                     <div class="widget_inner">
                                         <div class="sc_socials sc_socials_type_icons sc_socials_shape_round sc_socials_size_tiny">
