--- a/farm.html
+++ b/farm.html
@@ -1266,6 +1266,7 @@
 <script type='text/javascript' src='js/cart-api.js'></script>
 <script type='text/javascript' src='js/mini-cart.js'></script>
 <script type='text/javascript' src='js/auth-session.js'></script>
+<script type='text/javascript' src='js/formatting-override.js'></script>
 
 </body>
 
