--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,7 @@
 <script defer type='text/javascript' src='js/auth-session.js'></script>
 <script defer type='text/javascript' src='js/product-data.js'></script>
 <script defer type='text/javascript' src='js/index-dynamic.js'></script>
+<script defer type='text/javascript' src='js/formatting-override.js'></script>
 <script>
 // Year bar pagination logic for index page (#sc_tabs_583)
 document.addEventListener('DOMContentLoaded', function(){
