--- a/single-product.html
+++ b/single-product.html
@@ -235,9 +235,6 @@
                                                 <td class="value">
                                                     <select id="pa_weight" class="custom-dropdown" name="attribute_pa_weight" data-attribute_name="attribute_pa_weight" data-show_option_none="yes">
                                                         <option value="" selected>Choose Weight</option>
-                                                        <option value="1-lb">1 lb</option>
-                                                        <option value="3-lb">3 lb</option>
-                                                        <option value="5-lb">5 lb</option>
                                                     </select>
                                                 </td>
                                             </tr>
@@ -249,9 +246,6 @@
                                                 <td class="value">
                                                     <select id="pa_fat" class="custom-dropdown" name="attribute_pa_fat" data-attribute_name="attribute_pa_fat" data-show_option_none="yes">
                                                         <option value="" selected>Choose fat content</option>
-                                                        <option value="2">2%</option>
-                                                        <option value="3-5">3.5%</option>
-                                                        <option value="low-fat">Low Fat</option>
                                                     </select>
                                                     <a class="reset_variations" href="#">Clear</a>
                                                 </td>
@@ -304,7 +298,7 @@
                                         <tr>
                                             <th>Weight</th>
                                             <td>
-                                                <p>1 lb, 3 lb, 5 lb</p>
+                                                <p><!-- weights shown dynamically from product data --></p>
                                             </td>
                                         </tr>
                                         <tr>
