--- a/cart.html
+++ b/cart.html
@@ -247,31 +247,29 @@
         
         <div class="content_wrap">
             <h2>Your Cart</h2>
-            <div id="cart-container">
-                <!-- Placeholder for dynamically added products -->
-                <table id="cart-table" class="cart-table">
-                    <thead>
-                        <tr>
-                            <th>Product</th>
-                            <th>Quantity</th>
-                            <th>Price</th>
-                            <th>Total</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Products will be dynamically added here -->
-                    </tbody>
-                </table>
-                <p id="empty-cart-message" class="empty-cart-message">Your cart is currently empty.</p>
-            </div>
-            <div class="cart-bottom" style="display:none;flex-wrap:wrap;gap:20px;align-items:flex-start;justify-content:center;">
-                <div class="cart-note" style="flex:1 1 380px;min-width:220px;display:none;">
-                    <textarea id="order-note" name="order_note" placeholder="Add a note for this seller..." ></textarea>
+            <p id="empty-cart-message" class="empty-cart-message" style="display:none;">Your cart is currently empty.</p>
+
+            <div class="cart-page" id="cart-page" style="display:none;">
+                <div class="cart-items" id="cart-items">
+                    <!-- Items render here -->
                 </div>
-                <div class="cart-actions" style="flex:0 1 360px;display:none;flex-direction:column;gap:12px;align-items:center;justify-content:center;">
-                    <div class="continue-shopping-wrap"><a href="shop.html">Continue Shopping</a></div>
-                    <button id="proceed-to-checkout" class="sc_button sc_button_size_large sc_button_style_filled" style="display: none;">Proceed to Checkout</button>
-                </div>
+                <aside class="cart-summary" id="cart-summary">
+                    <div class="summary-card">
+                        <h3 class="summary-title">Order Summary</h3>
+                        <div class="summary-row"><span>Subtotal</span><span class="summary-subtotal">RM0.00</span></div>
+                        <div class="summary-row"><span>Shipping</span><span class="summary-shipping">RM0.00</span></div>
+                        <div class="summary-divider"></div>
+                        <div class="summary-row total"><span>Total</span><span class="summary-total">RM0.00</span></div>
+                        <div class="summary-actions">
+                            <a href="shop.html" class="continue-link">Continue Shopping</a>
+                            <button id="proceed-to-checkout" class="checkout-button"><span>Proceed to Checkout</span></button>
+                        </div>
+                        <div class="coupon-wrap" style="display:none;">
+                            <input type="text" id="coupon-code" placeholder="Coupon code" aria-label="Coupon code">
+                            <button class="apply-coupon" type="button">Apply</button>
+                        </div>
+                    </div>
+                </aside>
             </div>
         </div>
         <footer class="call_wrap">
